--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,24 @@
 .App {
   text-align: center;
 }
+.carbox {
+  position: absolute;
+  top: -20px;
+  width: 300px;
+  height: 75px;
+  background-color: #61dafb;
+}
 
 .App-logo {
+  scale: 2;
+  margin: 50px;
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin 3s 0.5s linear;
   }
 }
 
