--- a/src/pages/Hero/style.module.scss
+++ b/src/pages/Hero/style.module.scss
@@ -4,7 +4,7 @@
 .Container {
   width: 100%;
   min-height: 100vh;
-  background-color: rgb(32, 32, 32);
+  // background-color: rgb(32, 32, 32);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,8 +22,8 @@
 }
 
 .ImgContainer {
-  max-width: 600px;
-  height: 600px;
+  max-width: 100%;
+  height: 100%;
 }
 
 .ImgContainer img {
