--- a/src/pages/Hero/style.module.scss
+++ b/src/pages/Hero/style.module.scss
@@ -25,6 +25,24 @@
 .ImgContainer {
   max-width: 100%;
   height: 100%;
+  animation-name: anime1;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes anime1 {
+  0% {
+    transform: rotate(0);
+    scale: 1;
+  }
+  50% {
+    transform: rotate(360deg);
+    scale: 2;
+  }
+  100% {
+    transform: rotate(0);
+    scale: 3;
+  }
 }
 
 .ImgContainer img {
